Fix +/- buttons in dark mode.

--- a/js/app/restaurant/components/changeQuantityButton.scss
+++ b/js/app/restaurant/components/changeQuantityButton.scss
@@ -1,5 +1,3 @@
-@import "../../../../assets/css/vars.scss";
-
 .quantity-change-button {
   min-width: 3rem;
   min-height: 3rem;
@@ -11,14 +9,15 @@
   > div {
     min-width: 2rem;
     min-height: 2rem;
-    background-color: $light-gray;
+    background-color: var(--color-base-200);
+    color: var(--color-base-content);
     border-radius: 0.25rem;
     display: flex;
     align-items: center;
     justify-content: center;
 
     &:hover {
-      background-color: $gray;
+      background-color: var(--color-base-300);
     }
   }
 }
